--- a/src/blocks/services/styles/editor.scss
+++ b/src/blocks/services/styles/editor.scss
@@ -10,12 +10,12 @@
 
 	.block-editor-block-list__layout {
 		display: flex;
+		flex-direction: column;
 		flex-flow: row nowrap;
 		justify-content: space-between;
 
-		// On small screens, we are no longer using row direction but column.
-		@media all and (max-width: 514px) {
-			flex-direction: column;
+		@include break-small() {
+			flex-direction: row;
 		}
 
 		.block-editor-block-list__layout {
@@ -28,7 +28,7 @@
 		max-width: 100%;
 	}
 
-	@media all and (min-width: 514px) {
+	@include break-small() {
 		&[data-columns="2"] .wp-block[data-type="coblocks/service"] {
 			flex: 1 calc(100% / 2);
 			max-width: calc(100% / 2);
