--- a/src/blocks/services/styles/editor.scss
+++ b/src/blocks/services/styles/editor.scss
@@ -1,3 +1,5 @@
+$gutter: 1rem;
+
 .wp-block-coblocks-services {
 	[data-block] {
 		margin-bottom: 0;
@@ -9,13 +11,11 @@
 	}
 
 	.block-editor-block-list__layout {
-		display: flex;
-		flex-direction: column;
-		flex-flow: row nowrap;
-		justify-content: space-between;
-
 		@include break-small() {
+			display: flex;
 			flex-direction: row;
+			flex-flow: row nowrap;
+			justify-content: space-between;
 		}
 
 		.block-editor-block-list__layout {
@@ -29,19 +29,19 @@
 	}
 
 	@include break-small() {
-		&[data-columns="2"] .wp-block[data-type="coblocks/service"] {
-			flex: 1 calc(100% / 2);
-			max-width: calc(100% / 2);
+		&[data-columns="2"] .wp-block {
+			flex-basis: 50%;
+			max-width: calc(100% / 2 - #{$gutter});
 		}
 
-		&[data-columns="3"] .wp-block[data-type="coblocks/service"] {
+		&[data-columns="3"] .wp-block {
 			flex: 1 calc(100% / 3);
-			max-width: calc(100% / 3);
+			max-width: calc(100% / 3 - #{$gutter});
 		}
 
-		&[data-columns="4"] .wp-block[data-type="coblocks/service"] {
+		&[data-columns="4"] .wp-block {
 			flex: 1 calc(100% / 4);
-			max-width: calc(100% / 4);
+			max-width: calc(100% / 4 - #{$gutter} * 1.25);
 		}
 	}
 
