--- a/src/blocks/services/styles/style.scss
+++ b/src/blocks/services/styles/style.scss
@@ -1,3 +1,5 @@
+$gutter: 1rem;
+
 .wp-block-coblocks-services {
 	@include break-small() {
 		display: flex;
@@ -23,12 +25,12 @@
 	@include break-small() {
 		&[data-columns="2"] > .wp-block-coblocks-service {
 			flex-basis: 50%;
-			max-width: calc(100% / 2 - 1rem);
+			max-width: calc(100% / 2 - #{$gutter});
 		}
 
 		&[data-columns="3"] > .wp-block-coblocks-service {
 			flex-basis: 33.333%;
-			max-width: calc(100% / 3 - 1rem);
+			max-width: calc(100% / 3 - #{$gutter});
 		}
 	}
 
@@ -36,7 +38,7 @@
 		&[data-columns="4"] > .wp-block-coblocks-service {
 			flex-basis: 50%;
 			margin-bottom: 3rem;
-			max-width: calc(100% / 2 - 1rem);
+			max-width: calc(100% / 2 - #{$gutter});
 
 			&:nth-child(1),
 			&:nth-child(3) {
@@ -58,7 +60,7 @@
 	@include break-wide() {
 		&[data-columns="4"] > .wp-block-coblocks-service {
 			flex-basis: 25%;
-			max-width: calc(100% / 4 - 1rem);
+			max-width: calc(100% / 4 - #{$gutter} * 1.25);
 		}
 	}
 }
