--- a/src/blocks/services/service/styles/style.scss
+++ b/src/blocks/services/service/styles/style.scss
@@ -34,11 +34,11 @@
 	h4,
 	h5,
 	h6 {
-		margin-bottom: 1rem;
+		margin-bottom: 1em;
 	}
 
 	p {
-		margin-bottom: 1rem;
+		margin-bottom: 1em;
 		margin-top: 0;
 	}
 
