--- a/src/blocks/services/styles/editor.scss
+++ b/src/blocks/services/styles/editor.scss
@@ -1,4 +1,4 @@
-$gutter: 1rem;
+$gutter: 0.25em;
 
 .wp-block-coblocks-services {
 	[data-block] {
@@ -14,7 +14,7 @@ $gutter: 1rem;
 		@include break-small() {
 			display: flex;
 			flex-direction: row;
-			flex-flow: row nowrap;
+			flex-wrap: wrap;
 			justify-content: space-between;
 		}
 
@@ -29,19 +29,44 @@ $gutter: 1rem;
 	}
 
 	@include break-small() {
-		&[data-columns="2"] .wp-block {
+		&[data-columns="2"] .wp-block[data-type="coblocks/service"] {
 			flex-basis: 50%;
 			max-width: calc(100% / 2 - #{$gutter});
 		}
 
-		&[data-columns="3"] .wp-block {
-			flex: 1 calc(100% / 3);
+		&[data-columns="3"] .wp-block[data-type="coblocks/service"] {
+			flex-basis: 33.333%;
 			max-width: calc(100% / 3 - #{$gutter});
 		}
+	}
 
-		&[data-columns="4"] .wp-block {
-			flex: 1 calc(100% / 4);
-			max-width: calc(100% / 4 - #{$gutter} * 1.25);
+	@media (min-width: #{ ($break-small) }) and (max-width: #{ ($break-wide) }) {
+		&[data-columns="4"] .wp-block[data-type="coblocks/service"] {
+			flex-basis: 50%;
+			margin-bottom: 3em;
+			max-width: calc(100% / 2 - #{$gutter});
+
+			&:nth-child(1),
+			&:nth-child(3) {
+				margin-left: 0;
+			}
+
+			&:nth-child(2),
+			&:nth-child(4) {
+				margin-right: 0;
+			}
+
+			&:nth-child(3),
+			&:nth-child(4) {
+				margin-bottom: 0;
+			}
+		}
+	}
+
+	@include break-wide() {
+		&[data-columns="4"] .wp-block[data-type="coblocks/service"] {
+			flex-basis: 25%;
+			max-width: calc(100% / 4 - #{$gutter});
 		}
 	}
 
