--- a/src/blocks/services/service/styles/style.scss
+++ b/src/blocks/services/service/styles/style.scss
@@ -34,16 +34,17 @@
 	h4,
 	h5,
 	h6 {
-		margin-bottom: 1em;
+		margin-bottom: 0.75em;
+		margin-top: 1em;
 	}
 
 	p {
-		margin-bottom: 1em;
+		margin-bottom: 0;
 		margin-top: 0;
 	}
 
 	.wp-block-button {
 		margin-bottom: 0;
-		margin-top: 0;
+		margin-top: 1.5em;
 	}
 }
