--- a/src/blocks/food-and-drinks/food-item/styles/editor.scss
+++ b/src/blocks/food-and-drinks/food-item/styles/editor.scss
@@ -1,6 +1,7 @@
 .wp-block-coblocks-food-item {
 	display: block;
-	flex: 1 100%;
+	flex-grow: 1;
+	width: 100% !important;
 	padding: 0 !important;
 
 	.editor-media-placeholder {
