--- a/src/blocks/hero/styles/style.scss
+++ b/src/blocks/hero/styles/style.scss
@@ -1,131 +1,3 @@
-:-ms-fullscreen,
-:root .entry-content {
-	.wp-block-coblocks-hero {
-		&__inner {
-
-			display: table;
-			width: 100%;
-
-			&.hero-top-left-align {
-				> .wp-block-coblocks-hero__box {
-					display: table-cell;
-					vertical-align: top;
-					width: 30%;
-					h2 {
-						width: 33%;
-					}
-					p {
-						width: 33%;
-					}
-				}
-			}
-
-			&.hero-top-center-align {
-				> .wp-block-coblocks-hero__box {
-					display: table-cell;
-					vertical-align: top;
-					width: 30%;
-					p {
-						padding-left: 33%;
-						padding-right: 33%;
-					}
-				}
-			}
-
-			&.hero-top-right-align {
-				> .wp-block-coblocks-hero__box {
-					display: table-cell;
-					vertical-align: top;
-					width: 30%;
-				}
-				p {
-					padding-left: 66%;
-				}
-			}
-
-			&.hero-center-left-align {
-				.wp-block-coblocks-hero__box {
-					display: table-cell;
-					vertical-align: middle;
-					width: 30%;
-					p {
-						width: 33%;
-					}
-				}
-			}
-
-			&.hero-center-center-align {
-				> .wp-block-coblocks-hero__box {
-					display: table-cell;
-					vertical-align: middle;
-					width: 30%;
-				}
-				p {
-					padding-left: 33%;
-					padding-right: 33%;
-				}
-			}
-
-			&.hero-center-center-align.is-fullscreen {
-				> .wp-block-coblocks-hero__box {
-					display: table-cell;
-					vertical-align: middle;
-					width: 33%;
-				}
-				p {
-					padding-left: 33%;
-					padding-right: 33%;
-				}
-			}
-
-			&.hero-center-right-align {
-				> .wp-block-coblocks-hero__box {
-					display: table-cell;
-					vertical-align: middle;
-					width: 30%;
-					p {
-						padding-left: 66%;
-					 }
-				}
-			}
-
-			&.hero-bottom-left-align {
-				> .wp-block-coblocks-hero__box {
-					display: table-cell;
-					vertical-align: bottom;
-					width: 33%;
-				}
-				p {
-				 width: 33%;
-				}
-			}
-
-			&.hero-bottom-center-align {
-				> .wp-block-coblocks-hero__box {
-					display: table-cell;
-					vertical-align: bottom;
-					width: 33%;
-				}
-				p {
-					padding-left: 33%;
-					padding-right: 33%;
-					
-				}
-			}
-
-			&.hero-bottom-right-align {
-				> .wp-block-coblocks-hero__box {
-					display: table-cell;
-					vertical-align: bottom;
-					width: 33%;
-				}
-				p {
-					padding-left: 66%;
-				}
-			}
-		}
-	}
-}
 
 .wp-block-coblocks-hero {
 	position: relative;
@@ -162,9 +34,7 @@
 	}
 
 	&__inner {
-		display: grid;
-		grid-template-columns: repeat(3, auto);
-		grid-template-rows: repeat(3, 1fr);
+		display: flex;
 		position: relative;
 
 		&.is-fullscreen {
@@ -177,95 +47,53 @@
 
 		//grid alignment
 		&.hero-top-left-align {
-			> .wp-block-coblocks-hero__box {
-				grid-column: 1;
-				grid-row: 1;
-				margin-right: auto;
-			}
+			align-items: flex-start;
+			justify-content: flex-start;
 		}
 
 		&.hero-top-center-align {
-			> .wp-block-coblocks-hero__box {
-				grid-column: 2;
-				grid-row: 1;
-				margin: auto;
-			}
+			align-items: flex-start;
+			justify-content: center;
 		}
 
 		&.hero-top-right-align {
-			> .wp-block-coblocks-hero__box {
-				grid-column: 3;
-				grid-row: 1;
-				margin-left: auto;
-			}
+			align-items: flex-start;
+			justify-content: flex-end;
 		}
 
 		&.hero-center-left-align {
-			> .wp-block-coblocks-hero__box {
-				grid-column: 1;
-				grid-row: 2;
-				margin-right: auto;
-			}
+			align-items: center;
+			justify-content: flex-start;
 		}
 
 		&.hero-center-center-align {
-			> .wp-block-coblocks-hero__box {
-				grid-column: 2;
-				grid-row: 1;
-				margin: auto;
-			}
+			align-items: center;
+			justify-content: center;
 		}
 
 		&.hero-center-center-align.is-fullscreen {
-			> .wp-block-coblocks-hero__box {
-				grid-row: 2;
-			}
+			align-items: center;
+			justify-content: center;
 		}
 
 		&.hero-center-right-align {
-			> .wp-block-coblocks-hero__box {
-				grid-column: 3;
-				grid-row: 2;
-				margin-left: auto;
-			}
+			align-items: center;
+			justify-content: flex-end;
 		}
 
 		&.hero-bottom-left-align {
-			> .wp-block-coblocks-hero__box {
-				grid-column: 1;
-				grid-row: 3;
-				margin-right: auto;
-			}
+			align-items: flex-end;
+			justify-content: flex-start;
 		}
 
 		&.hero-bottom-center-align {
-			> .wp-block-coblocks-hero__box {
-				grid-column: 2;
-				grid-row: 3;
-				margin: auto;
-			}
+			align-items: flex-end;
+			justify-content: center;
 		}
 
 		&.hero-bottom-right-align {
-			> .wp-block-coblocks-hero__box {
-				grid-column: 3;
-				grid-row: 3;
-				margin-left: auto;
-			}
-		}
-
-		&:not(.is-fullscreen) {
-			&.hero-top-left-align,
-			&.hero-top-center-align,
-			&.hero-top-right-align,
-			&.hero-center-left-align,
-			&.hero-center-center-align,
-			&.hero-center-right-align,
-			&.hero-bottom-left-align,
-			&.hero-bottom-center-align,
-			&.hero-bottom-right-align {
-				grid-template-rows: auto;
-			}
+			align-items: flex-end;
+			justify-content: flex-end;
 		}
 	}
 
