--- a/src/blocks/services/styles/editor.scss
+++ b/src/blocks/services/styles/editor.scss
@@ -14,8 +14,8 @@ $gutter: 0.3em;
 	}
 
 	&.align-right {
-		.service-svg-second {
-			transform: translateX(2px);
+		.service-svg-moving-path {
+			transform: translateX(8px);
 		}
 	}
 }
