Switch to using flex and order for page view

--- a/src/blocks/media-card/styles/style.scss
+++ b/src/blocks/media-card/styles/style.scss
@@ -6,24 +6,16 @@
 
 			.wp-block-coblocks-row__inner{
 				flex-grow: 1;
-				margin-left: 33%;
-				margin-right: -10%;
-			}
-
-			figure {
-				margin-right:-25%;
-				width:100%;
 			}
 		}
 
 		&.is-style-right  {
+			flex-direction: row-reverse;
 			figure {
-				margin-left: 40%;
-				margin-right: -66%;
+				order:2;
 			}
 			.wp-block-coblocks-row__inner{
-				margin-left: -50%;		
-				margin-right: 70%;
+				order:1;
 			}
 		}
 	}
@@ -34,17 +26,6 @@
 	.wp-block-coblocks-media-card {
 		.wp-block-coblocks-media-card__wrapper {
 			display: flex;
-
-			.wp-block-coblocks-row__inner{
-				flex-grow: 1;
-				margin-right: 60%;
-			}
-
-			figure {
-				flex-grow: 1;
-				width:100%;
-				
-			}
 		}
 	}
 
@@ -55,18 +36,14 @@
 				flex-grow: 1;
 
 				.wp-block-coblocks-media-card__content{
-					color: red;
-					flex-grow: 1;
-					// margin-right: 20%;
 					.wp-block-coblocks-row__inner{
-						margin-left: -11%;		
-						margin-right: 70%;
+						order: 2;
 					}
 				}
-
-				img {
-					margin-left: 230%;
+				figure{
+					order:1;
 				}
+
 			}
 		}
 	}
