Fix Hero Block display in IE11 (#680)
* Switching to a table display system for IE11.

* Match styles with IE11

* Use flexbox to handle components-button-group

* match layout of components-button-group in ie11

* remove extra css

* move display style into ie11 selector

* Move from grid layout to flexbox for IE 11 support

* Simplify our grid alignment selectors.

--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -1,3 +1,17 @@
+:-ms-fullscreen,
+:root .components-coblocks-css-grid-selector {
+	.components-button-group {
+		display: flex;
+		flex-wrap: wrap;
+		  
+		.components-button {
+			display: table-cell;
+			padding: 18px;
+			width:50%;
+		}
+	}
+}
+
 .wp-block[data-type="coblocks/hero"] {
 	background: transparent !important;
 
