width is being set from core. working on override for ie11

--- a/src/blocks/media-card/styles/editor.scss
+++ b/src/blocks/media-card/styles/editor.scss
@@ -1,3 +1,29 @@
+:-ms-fullscreen,
+:root .editor-styles-wrapper .wp-block .wp-block {
+	width: none;
+
+}
+
+:-ms-fullscreen,
+:root .editor-block-list__block{
+	
+.is-style-right  {
+			display: flex;
+			flex-grow: 1;
+			
+		.components-resizable-box__container {
+			order: 2;
+		}
+
+		.wp-block-coblocks-media-card__content {
+			order :1;
+			overflow: hidden;
+		}
+		}
+	}
+
+
+
 .wp-block-coblocks-media-card {
 	&__wrapper {
 		@media (max-width: #{ ($break-small-mediacard) }) {
@@ -180,7 +206,7 @@
 
 	// Child blocks should not have a max-width.
 	.editor-inner-blocks .wp-block {
-		max-width: none;
+		// max-width: none;
 	}
 
 	.wp-block[data-type="coblocks/row"] .editor-block-mover {
