--- a/src/blocks/logos/styles/editor.scss
+++ b/src/blocks/logos/styles/editor.scss
@@ -1,36 +1,19 @@
-.wp-block-coblocks-logo:not(.editor-media-placeholder) {
-	align-items: center;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	margin-bottom: 0;
-	max-width: 100%;
-	user-select: none;
-	width: 100%;
-
+.wp-block-coblocks-logo {
 	.wrapper > div {
-		margin: 0 1em;
-
-		&:first-child {
-			margin-left: 0;
-		}
-
 		&:nth-last-child(2) {
 			margin-right: 0;
 		}
-	}
 
-	img {
-		vertical-align: middle;
-
-		&:focus {
+		img:focus {
 			outline: none;
 		}
 	}
 
-	.components-resizable-box__handle {
-		z-index: 999;
+	.editor-media-placeholder:not(.wp-block-coblocks-logo) {
+		.components-placeholder__label,
+		.components-placeholder__instructions {
+			display: none;
+		}
 	}
 
 	.block-editor-media-placeholder.is-appender {
@@ -38,18 +21,9 @@
 		margin-top: 16px;
 		min-height: 100px;
 		outline: 1px dashed $dark-gray-150;
-	}
 
-	.components-placeholder__label,
-	.components-placeholder__instructions {
-		display: none;
-	}
-
-	.components-button {
-		margin-bottom: 1px;
-	}
-
-	.resize {
-		text-align: center;
+		.components-button {
+			margin-bottom: 1px;
+		}
 	}
 }
