--- a/src/blocks/logos/styles/style.scss
+++ b/src/blocks/logos/styles/style.scss
@@ -1,32 +1,25 @@
-.wp-block-coblocks-logo:not(.editor-media-placeholder) {
-	align-items: center;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	max-width: 100%;
-	user-select: none;
-	width: 100%;
-
-	.wrapper {
+.wp-block-coblocks-logos {
+	&__row {
 		align-items: center;
-		display: inline-flex;
+		display: flex;
 		flex-direction: row;
 		justify-content: center;
-		max-width: 100%;
-		user-select: none;
-		width: 100%;
 
-		> img {
-			margin: 0 1em;
+		@media (max-width: #{ ($break-small) }) {
+			flex-wrap: wrap;
+		}
 
-			&:first-child {
-				margin-left: 0;
-			}
+		& + & {
+			margin-top: 2em;
+		}
 
-			&:last-child {
-				margin-right: 0;
-			}
+		> div {
+			margin: 0 1.5em;
+		}
+
+		img {
+			vertical-align: middle;
+			width: 100%;
 		}
 	}
 }
