--- a/src/blocks/logos/styles/editor.scss
+++ b/src/blocks/logos/styles/editor.scss
@@ -10,6 +10,14 @@
 		}
 	}
 
+	.components-resizable-box__handle-left {
+		left: 13px;
+	}
+
+	.components-resizable-box__handle-right {
+		right: 14px;
+	}
+
 	.block-editor-media-placeholder.is-appender {
 		margin-bottom: 0;
 		margin-top: 16px;
